--- a/src/main/resources/templates/members/createMemberForm.html
+++ b/src/main/resources/templates/members/createMemberForm.html
@@ -11,7 +11,7 @@
 <div class="container">
     <div th:replace="fragments/bodyHeader :: bodyHeader"/>
 
-    <form role="form" action="/members/new" th:object="${memberForm}" method="post">
+    <form role="form" th:action="@{/members/new}" th:object="${memberForm}" method="post">
         <div class="form-group">
             <label th:for="name">아이디</label>
 
@@ -27,7 +27,7 @@
 
         <div class="form-group">
             <label th:for="street">패스워드</label>
-            <input type="text" th:field="*{password}" class="form-control" placeholder="패스워드를 입력해주세요">
+            <input type="password" th:field="*{password}" class="form-control" placeholder="패스워드를 입력해주세요">
         </div>
 
         <button type="submit" class="btn btn-primary">Submit</button>
