- 인물 등록 및 댓글 로직 중간 커밋

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="https://www.thymeleaf.org"
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<head>
 <head>
   <meta charset="UTF-8">
   <title>home</title>
 </head>
 <body>
-  <div>
-
+  <div class="center">
+    환영합니다
   </div>
 </body>
 </html>
