--- a/src/main/resources/static/css/jumbotron-narrow.css
+++ b/src/main/resources/static/css/jumbotron-narrow.css
@@ -1,8 +1,8 @@
-/* Space out content a bit */
-body {
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
+/*!* Space out content a bit *!*/
+/*body {*/
+/*    padding-top: 20px;*/
+/*    padding-bottom: 20px;*/
+/*}*/
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
@@ -12,10 +12,10 @@ body {
     padding-right: 15px;
 }
 
-/* Custom page header */
-.header {
-    border-bottom: 1px solid #e5e5e5;
-}
+/*!* Custom page header *!*/
+/*.header {*/
+/*    border-bottom: 1px solid #e5e5e5;*/
+/*}*/
 /* Make the masthead heading the same height as the navigation */
 .header h3 {
     margin-top: 0;
