--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -31,6 +31,7 @@
 /* Template default CSS
 /*----------------------------------------*/
 
+
 html,
 body {
 	height: 100%;
@@ -48,7 +49,8 @@ h6 {
 	margin: 0;
 	color: #111111;
 	font-weight: 400;
-	font-family: "Mulish", sans-serif;
+	font-family: "Do Hyeon", sans-serif;
+
 }
 
 h1 {
@@ -86,6 +88,9 @@ p {
 
 img {
 	max-width: 100%;
+	max-height: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
 input:focus,
@@ -131,7 +136,7 @@ ol {
 .section-title h5:after {
 	position: absolute;
 	left: 0;
-	top: -6px;
+	top: -3px;
 	height: 32px;
 	width: 4px;
 	background: #e53637;
@@ -731,7 +736,7 @@ ol {
 .product__sidebar .section-title h5:after {
 	position: absolute;
 	left: 0;
-	top: -6px;
+	top: -3px;
 	height: 32px;
 	width: 4px;
 	background: #e53637;
