--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -66,7 +66,7 @@
                         <div class="row">
                             <div class="col-lg-8 col-md-8 col-sm-8">
                                 <div class="section-title">
-                                    <h4>Trending Now</h4>
+                                    <h4>Recent Iflander</h4>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-4">
@@ -76,20 +76,25 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-4 col-md-6 col-sm-6">
+                            <div class="col-lg-4 col-md-6 col-sm-6" th:each="profile : ${profileList}">
                                 <div class="product__item">
-                                    <div class="product__item__pic set-bg">
-                                        <img src="./images/trending/trend-1.jpg"/>
-                                        <div class="ep">18 / 18</div>
-                                        <div class="comment"><i class="fa fa-comments"></i> 11</div>
-                                        <div class="view"><i class="fa fa-eye"></i> 9141</div>
+                                    <div class="product__item__pic set-bg" th:style="${'background-image: url('+ profile.image + ')'}">
+<!--                                        <img th:src="${profile.image}"/>-->
+<!--                                        <div class="ep">18 / 18</div>-->
+                                        <div class="comment">
+                                            <i class="fa fa-heart"></i>
+                                            <div class="like_count" th:text="${profile.likeCount}" style="float: right; margin-left: 5px;"></div>
+                                        </div>
+                                        <div class="view">
+                                            <i class="fa fa-eye"></i>
+                                            <div class="view_count" th:text="${profile.viewCount}" style="float: right; margin-left: 5px;"></div>
+                                        </div>
                                     </div>
                                     <div class="product__item__text">
                                         <ul>
-                                            <li>Active</li>
-                                            <li>Movie</li>
+                                            <li th:each="tag : ${profile.tags}" th:text="${tag.tag}" th:style="${'background: rgba(' + tag.rgba + ')'}"></li>
                                         </ul>
-                                        <h5><a href="#">The Seven Deadly Sins: Wrath of the Gods</a></h5>
+                                        <h5 th:text="${profile.iflandNickName}" style="color: #ffffff;"><a href="#"></a></h5>
                                     </div>
                                 </div>
                             </div>
