--- a/src/main/resources/templates/main/login.html
+++ b/src/main/resources/templates/main/login.html
@@ -13,13 +13,13 @@
     <!-- Header End -->
 
     <!-- Normal Breadcrumb Begin -->
-    <section class="normal-breadcrumb set-bg" data-setbg="img/normal-breadcrumb.jpg">
+    <section class="normal-breadcrumb set-bg" data-setbg="images/normal-breadcrumb.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="normal__breadcrumb__text">
                         <h2>Login</h2>
-                        <p>Welcome to the official Anime blog.</p>
+                        <p>Welcome to the Ifland Wiki</p>
                     </div>
                 </div>
             </div>
@@ -33,7 +33,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="login__form">
-                        <h3>Login</h3>
+                        <h3>로그인</h3>
                         <form action="#">
                             <div class="input__item">
                                 <input type="text" placeholder="Email address">
@@ -45,32 +45,32 @@
                             </div>
                             <button type="submit" class="site-btn">Login Now</button>
                         </form>
-                        <a href="#" class="forget_pass">Forgot Your Password?</a>
+                        <a href="#" class="forget_pass">비밀번호를 잊으셨나요?</a>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="login__register">
-                        <h3>Dont’t Have An Account?</h3>
-                        <a href="#" class="primary-btn">Register Now</a>
+                        <h3>계정이 없으신가요?</h3>
+                        <a th:href="@{/sign-up}" class="primary-btn">Register Now</a>
                     </div>
                 </div>
             </div>
-            <div class="login__social">
-                <div class="row d-flex justify-content-center">
-                    <div class="col-lg-6">
-                        <div class="login__social__links">
-                            <span>or</span>
-                            <ul>
-                                <li><a href="#" class="facebook"><i class="fa fa-facebook"></i> Sign in With
-                                Facebook</a></li>
-                                <li><a href="#" class="google"><i class="fa fa-google"></i> Sign in With Google</a></li>
-                                <li><a href="#" class="twitter"><i class="fa fa-twitter"></i> Sign in With Twitter</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<!--            <div class="login__social">-->
+<!--                <div class="row d-flex justify-content-center">-->
+<!--                    <div class="col-lg-6">-->
+<!--                        <div class="login__social__links">-->
+<!--                            <span>or</span>-->
+<!--                            <ul>-->
+<!--                                <li><a href="#" class="facebook"><i class="fa fa-facebook"></i> Sign in With-->
+<!--                                Facebook</a></li>-->
+<!--                                <li><a href="#" class="google"><i class="fa fa-google"></i> Sign in With Google</a></li>-->
+<!--                                <li><a href="#" class="twitter"><i class="fa fa-twitter"></i> Sign in With Twitter</a>-->
+<!--                                </li>-->
+<!--                            </ul>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
     </section>
     <!-- Login Section End -->
