템플릿 수정

--- a/src/main/resources/templates/baseTemplate.html
+++ b/src/main/resources/templates/baseTemplate.html
@@ -5,7 +5,9 @@
 <!-- Header Section End -->
 
 <body>
-
+  <!-- Navigator Section Begin -->
+  <th:block th:replace="fragments/navigator :: navigator"/>
+  <!-- Navigator Section End -->
 </body>
 
 <!-- Footer Section Begin -->
