--- a/src/main/resources/templates/fragments/navigator.html
+++ b/src/main/resources/templates/fragments/navigator.html
@@ -19,7 +19,7 @@
                 <li><a th:href="@{/category}">카테고리 <span class="arrow_carrot-down"></span></a>
                   <ul class="dropdown">
                     <li><a th:href="@{/category}">Categories</a></li>
-                    <li><a href="./anime-details.html">Anime Details</a></li>
+                    <li><a th:href="@{/profile/detail}">Profile Details</a></li>
                     <li><a href="./anime-watching.html">Anime Watching</a></li>
                     <li><a href="./blog-details.html">Blog Details</a></li>
                     <li><a href="./signup.html">Sign Up</a></li>
