--- a/src/main/resources/templates/main/anime-details.html
+++ b/src/main/resources/templates/main/anime-details.html
@@ -20,9 +20,9 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb__links">
-                        <a href="./index.html"><i class="fa fa-home"></i> Home</a>
-                        <a href="./categories.html">Categories</a>
-                        <span>Romance</span>
+                        <a th:href="@{/}"><i class="fa fa-home"></i> Home</a>
+                        <a th:href="@{/profile/category}">이프랜더 정보</a>
+                        <span>상세정보</span>
                     </div>
                 </div>
             </div>
@@ -36,16 +36,26 @@
             <div class="anime__details__content">
                 <div class="row">
                     <div class="col-lg-3">
-                        <div class="anime__details__pic set-bg" data-setbg="img/anime/details-pic.jpg">
-                            <div class="comment"><i class="fa fa-comments"></i> 11</div>
-                            <div class="view"><i class="fa fa-eye"></i> 9141</div>
+                        <div class="anime__details__pic set-bg" th:style="${'background-image: url('+ profile.image + ')'}">
+                            <div class="comment">
+                                <i class="fa fa-heart"></i>
+                                <div class="like_count" th:text="${profile.likeCount}" style="float: right; margin-left: 5px;"></div>
+                            </div>
+                            <div class="view">
+                                <i class="fa fa-eye"></i>
+                                <div class="view_count" th:text="${profile.viewCount}" style="float: right; margin-left: 5px;"></div>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-9">
                         <div class="anime__details__text">
                             <div class="anime__details__title">
-                                <h3>Fate Stay Night: Unlimited Blade</h3>
-                                <span>フェイト／ステイナイト, Feito／sutei naito</span>
+                                <h3 th:text="${profile.iflandNickName}"></h3>
+                                <div class="product__item__text" style="padding-top: 0px;">
+                                    <ul>
+                                        <li th:each="tag : ${profile.tags}" th:text="${tag.tag}" th:style="${'background: rgba(' + tag.rgba + '); font-size: 13px;'}"></li>
+                                    </ul>
+                                </div>
                             </div>
                             <div class="anime__details__rating">
                                 <div class="rating">
@@ -197,59 +207,18 @@
         </section>
         <!-- Anime Section End -->
 
-        <!-- Footer Section Begin -->
-        <footer class="footer">
-            <div class="page-up">
-                <a href="#" id="scrollToTopButton"><span class="arrow_carrot-up"></span></a>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-3">
-                        <div class="footer__logo">
-                            <a href="./index.html"><img src="img/logo.png" alt=""></a>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="footer__nav">
-                            <ul>
-                                <li class="active"><a href="./index.html">Homepage</a></li>
-                                <li><a href="./categories.html">Categories</a></li>
-                                <li><a href="./blog.html">Our Blog</a></li>
-                                <li><a href="#">Contacts</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                          Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-
-                      </div>
-                  </div>
-              </div>
-          </footer>
-          <!-- Footer Section End -->
-
-          <!-- Search model Begin -->
-          <div class="search-model">
+        <!-- Search model Begin -->
+        <div class="search-model">
             <div class="h-100 d-flex align-items-center justify-content-center">
-                <div class="search-close-switch"><i class="icon_close"></i></div>
+                <div class="search-close-switch">
+                    <i class="icon_close"></i>
+                </div>
                 <form class="search-model-form">
                     <input type="text" id="search-input" placeholder="Search here.....">
                 </form>
             </div>
         </div>
         <!-- Search model end -->
-
-        <!-- Js Plugins -->
-        <script src="js/jquery-3.3.1.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/player.js"></script>
-        <script src="js/jquery.nice-select.min.js"></script>
-        <script src="js/mixitup.min.js"></script>
-        <script src="js/jquery.slicknav.js"></script>
-        <script src="js/owl.carousel.min.js"></script>
-        <script src="js/main.js"></script>
 
     </body>
 
