- querydsl로 변경작업 - 페이지에 따른 navigator 메뉴 색 변경 - 캐릭터 검색 기능 추가 - querydsl 사용에 따른 페이징 로직 변경

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -198,6 +198,18 @@ ol {
 	padding: 12px 30px;
 }
 
+.search-btn {
+	font-size: 13px;
+	color: #ffffff;
+	background: #e53637;
+	font-weight: 700;
+	border: none;
+	border-radius: 2px;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	display: inline-block;
+}
+
 /* Preloder */
 
 #preloder {
