--- a/src/main/resources/templates/main/categories.html
+++ b/src/main/resources/templates/main/categories.html
@@ -44,12 +44,18 @@
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-6">
                                     <div class="product__page__filter">
-                                        <p>Order by:</p>
-                                        <select>
-                                            <option value="">A-Z</option>
-                                            <option value="">1-10</option>
-                                            <option value="">10-50</option>
-                                        </select>
+                                        <form th:action="@{/profile/category}">
+                                            <div class="input__item">
+                                                <input type="text" name="keyword" style="float: left; width: 180px;" placeholder="검색어">
+                                                <button type="submit" class="search-btn" style="float: right; width:46px; height: 31px;">검색</button>
+                                            </div>
+                                        </form>
+<!--                                        <p>Order by:</p>-->
+<!--                                        <select>-->
+<!--                                            <option value="">A-Z</option>-->
+<!--                                            <option value="">1-10</option>-->
+<!--                                            <option value="">10-50</option>-->
+<!--                                        </select>-->
                                     </div>
                                 </div>
                             </div>
