- 이메일 전송 로직 추가

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -23,12 +23,12 @@
 <!--                    </div>-->
 <!--                </div>-->
                 <div class="col-lg-3" style="margin: auto;">
-                    <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                    <p style="color: #ffffff"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved by <a href="https://colorlib.com" target="_blank">Colorlib</a><br>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </p>
-                    <p>
-                        Made by 지누리즈 / E-mail : bagzein@gmail.com
+                    <p style="color: #ffffff">
+                        Made by 지누리즈 / E-mail : dev.jinuliz@gmail.com
                     </p>
 
                 </div>
