- Chaos Monkey 설정 추가 - 상세정보 변경 - Like 추가 - Hate 추가

--- a/src/main/resources/templates/main/anime-details.html
+++ b/src/main/resources/templates/main/anime-details.html
@@ -57,48 +57,34 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="anime__details__rating">
-                                <div class="rating">
-                                    <a href="#"><i class="fa fa-star"></i></a>
-                                    <a href="#"><i class="fa fa-star"></i></a>
-                                    <a href="#"><i class="fa fa-star"></i></a>
-                                    <a href="#"><i class="fa fa-star"></i></a>
-                                    <a href="#"><i class="fa fa-star-half-o"></i></a>
-                                </div>
-                                <span>1.029 Votes</span>
-                            </div>
-                            <p>Every human inhabiting the world of Alcia is branded by a “Count” or a number written on
-                                their body. For Hina’s mother, her total drops to 0 and she’s pulled into the Abyss,
-                                never to be seen again. But her mother’s last words send Hina on a quest to find a
-                            legendary hero from the Waste War - the fabled Ace!</p>
+                            <p th:text="${profile.contents}" style="color: #ffffff"></p>
                             <div class="anime__details__widget">
                                 <div class="row">
                                     <div class="col-lg-6 col-md-6">
                                         <ul>
-                                            <li><span>Type:</span> TV Series</li>
-                                            <li><span>Studios:</span> Lerche</li>
-                                            <li><span>Date aired:</span> Oct 02, 2019 to ?</li>
-                                            <li><span>Status:</span> Airing</li>
-                                            <li><span>Genre:</span> Action, Adventure, Fantasy, Magic</li>
+                                            <li><span>IF 시작일: </span>2021년 10월</li>
+                                            <li><span>MBTI: </span>ISTP</li>
+                                            <li><span>소속: </span>중립</li>
+                                            <li><span>좋아하는 것: </span><div th:text="${profile.likesToString}"></div></li>
+                                            <li><span>싫어하는 것: </span><div th:text="${profile.hatesToString}"></div></li>
                                         </ul>
                                     </div>
                                     <div class="col-lg-6 col-md-6">
                                         <ul>
-                                            <li><span>Scores:</span> 7.31 / 1,515</li>
-                                            <li><span>Rating:</span> 8.5 / 161 times</li>
-                                            <li><span>Duration:</span> 24 min/ep</li>
-                                            <li><span>Quality:</span> HD</li>
-                                            <li><span>Views:</span> 131,541</li>
+                                            <li><span>블로그:</span> -</li>
+                                            <li><span>인스타그램:</span> <a href="https://www.instagram.com/jinu_liz" target="_blank">https://www.instagram.com/jinu_liz</a></li>
+                                            <li><span>페이스북:</span> -</li>
+                                            <li><span>카카오뷰:</span> -</li>
+                                            <li><span>오픈채팅:</span> <a href="https://open.kakao.com/o/sr72dG0d" target="_blank">https://open.kakao.com/o/sr72dG0d</a></li>
                                         </ul>
                                     </div>
                                 </div>
                             </div>
                             <div class="anime__details__btn">
-                                <a href="#" class="follow-btn"><i class="fa fa-heart-o"></i> Follow</a>
-                                <a href="#" class="watch-btn"><span>Watch Now</span> <i
-                                    class="fa fa-angle-right"></i></a>
-                                </div>
+                                <a href="#" class="follow-btn"><i class="fa fa-heart-o"></i> Like</a>
+                                <a href="#" class="follow-btn"><i class="fa fa-bomb"></i> Villain</a>
                             </div>
+                        </div>
                         </div>
                     </div>
                 </div>
