- 인물 상세정보 댓글 작성란 위치 변경

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1195,6 +1195,12 @@ ol {
 	border-radius: 2px;
 }
 
+.anime__details__form #comment-button {
+	position: absolute;
+	right: 15px;
+	top: 0;
+}
+
 /*---------------------
   Anime Watching
 -----------------------*/
