--- a/src/main/resources/templates/main/anime-details.html
+++ b/src/main/resources/templates/main/anime-details.html
@@ -110,6 +110,15 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-8 col-md-8">
+                        <div class="anime__details__form">
+                            <div class="section-title">
+                                <h5>Write Comment</h5>
+                            </div>
+                            <form action="#">
+                                <textarea placeholder="Your Comment"></textarea>
+                                <button id="comment-button" type="submit"><i class="fa fa-location-arrow"></i> Comment</button>
+                            </form>
+                        </div>
                         <div class="anime__details__review">
                             <div class="section-title">
                                 <h5>Reviews</h5>
@@ -123,15 +132,6 @@
                                     <p>재밌게 잘봤습니다 :)</p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="anime__details__form">
-                            <div class="section-title">
-                                <h5>Write Comment</h5>
-                            </div>
-                            <form action="#">
-                                <textarea placeholder="Your Comment"></textarea>
-                                <button type="submit"><i class="fa fa-location-arrow"></i> Review</button>
-                            </form>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4">
