- 댓글 작성 시 재조회 로직 추가

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1146,6 +1146,10 @@ ol {
 	border-radius: 50%;
 }
 
+.last__comment:before {
+	border-left: 15px solid dimgray;
+}
+
 .anime__review__item__text {
 	overflow: hidden;
 	background: #1d1e39;
