--- a/src/main/resources/templates/main/anime-details.html
+++ b/src/main/resources/templates/main/anime-details.html
@@ -120,7 +120,7 @@
                                 <button id="comment-button" onclick="writeComment();"><i class="fa fa-location-arrow"></i> Comment</button>
                             </form>
                         </div>
-                        <div class="anime__details__review">
+                        <div id="commentDiv" class="anime__details__review">
                             <div class="section-title">
                                 <h5>Comment</h5>
                             </div>
