- sweet alert2 라이브러리 추가 - 비밀번호 찾기 기능 추가(back단 작업 필요)

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -32,6 +32,7 @@
         <script src="http://code.jquery.com/jquery-latest.min.js"></script>
         <script th:src="@{/js/bootstrap.min.js}"></script>
         <script th:src="@{/js/player.js}"></script>
+        <script th:src="@{/js/sweet-alert-2.js}"></script>
         <script th:src="@{/js/jquery.nice-select.min.js}"></script>
         <script th:src="@{/js/mixitup.min.js}"></script>
         <script th:src="@{/js/jquery.slicknav.js}"></script>
