--- a/src/main/resources/templates/main/login.html
+++ b/src/main/resources/templates/main/login.html
@@ -34,7 +34,7 @@
                 <div class="col-lg-6">
                     <div class="login__form">
                         <h3>로그인</h3>
-                        <form action="#">
+                        <form th:action="@{/login-process}">
                             <div class="input__item">
                                 <input type="email" placeholder="이메일 주소">
                                 <span class="icon_mail"></span>
@@ -45,7 +45,7 @@
                             </div>
                             <button type="submit" class="site-btn">Login</button>
                         </form>
-                        <a href="#" class="forget_pass">비밀번호를 잊으셨나요?</a>
+                        <span style="cursor: pointer;" class="forget_pass" onclick="forgetPW();">비밀번호를 잊으셨나요?</span>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -58,7 +58,27 @@
         </div>
     </section>
     <!-- Login Section End -->
+<script>
+    function forgetPW() {
+        Swal.fire({
+            title: '찾으실 계정(이메일)을 입력해주세요.',
+            input: 'text',
+            color: '#ffffff',
+            background: '#212529',
+            showCancelButton: true,
+            showLoaderOnConfirm: true,
+            confirmButtonColor: '#e53637',
+            confirmButtonText: '확인',
+            cancelButtonText: '취소',
+            preConfirm: (account) => {
+                let regex = new RegExp('[a-z0-9]+@[a-z]+\.[a-z]{2,3}');
+                if (!regex.test(account)) Swal.showValidationMessage('올바른 이메일 형식이 아닙니다.');
 
+
+            }
+        })
+    }
+</script>
 </body>
 
 <!-- Footer Section Begin -->
