- 비밀번호 찾기 로직 중간 커밋3

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -38,6 +38,7 @@
         <script th:src="@{/js/jquery.slicknav.js}"></script>
         <script th:src="@{/js/owl.carousel.min.js}"></script>
         <script th:src="@{/js/main.js}"></script>
+        <script th:src="@{/js/util/api-utils.js}"></script>
         <script th:src="@{/js/util/commonUtils.js}"></script>
     </head>
 </th:block>
