- dayjs 라이브러리 header 추가

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -33,6 +33,7 @@
         <script th:src="@{/js/bootstrap.min.js}"></script>
         <script th:src="@{/js/player.js}"></script>
         <script th:src="@{/js/sweet-alert-2.js}"></script>
+        <script th:src="@{/js/dayjs.min.js}"></script>
         <script th:src="@{/js/jquery.nice-select.min.js}"></script>
         <script th:src="@{/js/mixitup.min.js}"></script>
         <script th:src="@{/js/jquery.slicknav.js}"></script>
